[tracing] Use the URL origin as process label for title-less frames

For top level frames, process labels are set from the document title.
Consequently, when the document has an empty title, the renderer shows up
in traces with an empty label. This happens in particular for extensions
that use a generated background page. With this CL, labels fall back to
the frame's origin in case the title is empty. As a side effect, labels
for subframes now include also the port in addition to the host (i.e.,
the full origin).

Fixed: chromium:673386
Change-Id: I530eede9bc89bd20f3c4c92aaa044bcab02d7718
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3063235
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Eric Seckler <eseckler@chromium.org>
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#908372}